# Robot_Control_with_depth_camera

./: README.md  hand_tracking.py
UR_control_by_depth_camera/: CMakeLists.txt  package.xml  setup.py
UR_control_by_depth_camera/joint_angle_files/: joint_limits.yaml
UR_control_by_depth_camera/scripts/: camera_publisher.py  hand_to_coordinates_mediapipe.py  hand_tracking.py  moveit_test.py  tracking_orientation.py
UR_control_by_depth_camera/src/UR_control_by_depth_camera/: robot_classes.py
opencv_to_universal_robot/: CMakeLists.txt  package.xml
opencv_to_universal_robot/scripts/: camera_publisher.py  camera_subscriber.py  hand_to_coordinates_mediapipe.py  hand_tracking.py  moveit_test.py  movement_tests.py
